Thu Dec 10 22:45:18 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:

          Refactored make_reservation to call new start_i callback
          when the first reservation is made.

        * dds/DCPS/transport/multicast/BestEffortMulticast.h:
        * dds/DCPS/transport/multicast/BestEffortMulticast.cpp:
        * dds/DCPS/transport/multicast/MulticastDataLink.h:
        * dds/DCPS/transport/multicast/MulticastDataLink.inl:
        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
        * dds/DCPS/transport/multicast/ReliableMulticast.h:
        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:

          Updated to accomodate changes in DataLink; separating the
          watchdog scheduling from join was neccessary to prevent
          lost data during the initial handshake.

Thu Dec 10 21:49:20 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/Definitions.h:

          Type conversion is const, so make it so.

        * dds/DCPS/transport/framework/TransportSendBuffer.cpp:

          Add diagnostics.

Thu Dec 10 20:19:56 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>

        * tools/odds_monitor/MonitorData.cpp:

          Add a workaround to deal with QStrings on windows.
          Using QString::toStdString() results in an access violation.
          Replace these calls with QString::toLocal8Bit().constData().

Thu Dec 10 17:35:46 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * MPC/config/dcps_multicast.mpb:

          Fixed incorrect after directive.

Thu Dec 10 16:49:32 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/RandomGenerator.cpp:

          Dropped obviated include by previous commit.

Thu Dec 10 15:24:49 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/RandomGenerator.cpp:
