@@ -1,3 +1,11 @@
+Thu Dec 10 23:16:19 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/transport/framework/DataLinkWatchdog_T.h:
+        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:
+
+          Updated handshaking logic to trigger immediately (reduces delay
+          when forming a new reservation between peers).
+
 Thu Dec 10 22:45:18 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/transport/framework/DataLink.h:
